name:                yomi-metabase
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cpennington/yomi-metabase#readme
license:             BSD3
license-file:        LICENSE
author:              Calen Pennington
maintainer:          calen.pennington@gmail.com
copyright:           2017
category:             Miscellanious
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable yomi-metabase
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , moo
                     , mersenne-random-pure64
                     , monad-mersenne-random
                     , monad-extras
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite yomi-metabase-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  other-modules:       FooTest
  build-depends:       base
                     , tasty-discover
                     , tasty
                     , tasty-quickcheck
  default-language:    Haskell2010
