name:                yomi-metabase
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cpennington/yomi-metabase#readme
license:             BSD3
license-file:        LICENSE
author:              Calen Pennington
maintainer:          calen.pennington@gmail.com
copyright:           2017
category:             Miscellanious
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable yomi-metabase-static
  hs-source-dirs:      src
  main-is:             Yomi/EvolveMeta.hs
  ghc-options:         -main-is Yomi.EvolveMeta.main
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , moo
                     , mersenne-random-pure64
                     , monad-mersenne-random
                     , monad-extras
                     , clustering
                     , vector
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable yomi-metabase-counterpicks
  hs-source-dirs:      src
  main-is:             Yomi/CounterPicks.hs
  ghc-options:         -main-is Yomi.CounterPicks.main
  default-language:    Haskell2010
  other-modules:       Yomi.Types
                     , Yomi.WinRates
  build-depends:       base >= 4.7 && < 5
                     , array
                     , monad-mersenne-random
                     , monad-extras
                     , vector
                     , mtl
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

